# Slurm

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  debug.txst  file.cpp
.cache/clangd/index/: main.cpp.7BBF95BF2873A83B.idx  ptymanager.hpp.B1B02CEF84607976.idx
bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Slurm.sln  Slurm.vcxproj  Slurm.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
bld/Slurm.dir/Release/: Slurm.exe.recipe
bld/Slurm.dir/Release/Slurm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Slurm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bld/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
bld/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
bld/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: pseudoconsole.hpp  ptymanager.hpp
lbld/: CMakeCache.txt  Makefile  Slurm  cmake_install.cmake  compile_commands.json
src/: console.cpp  main.cpp  pseudoconsole.cpp
